syntax = "proto3";

package diploma;

option go_package = "user_secret/proto";

message UserSecret {
  string id = 1;
  string name = 2;
  string type = 3;
  bytes data = 4;
}

message CreateUserSecretRequest {
  string token = 1;
  UserSecret secret = 2;
}

message CreateUserSecretResponse {
  string error = 1; // ошибка
}

message DeleteUserSecretRequest {
  string token = 1;
  string id = 2;
}

message DeleteUserSecretResponse {
  string error = 1; // ошибка
}

message GetUserSecretsRequest {
  string token = 1;
  int64 page = 2;
}

message GetUserSecretsResponse {
  repeated UserSecret secrets = 1;
  int64 page = 2;
  int64 totalPages = 3;
  string error = 4; // ошибка
}

service UserSecrets {
  rpc CreateUserSecret(CreateUserSecretRequest) returns (CreateUserSecretResponse);
  rpc DeleteUserSecret(DeleteUserSecretRequest) returns (DeleteUserSecretResponse);
  rpc GetUserSecrets(GetUserSecretsRequest) returns (GetUserSecretsResponse);
}